--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.26.1",
+    "@splinetool/react-spline": "^2.2.6",
     "next": "14.1.0",
     "next-sanity": "^7.0.15",
     "react": "^18",
