--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^7.0.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sanity": "^3.26.1",
     "styled-components": "^6.1.8"
   },
